--- a/src/main/resources/contexts/dev.yaml
+++ b/src/main/resources/contexts/dev.yaml
@@ -1,6 +1,6 @@
 dev:
-  author.url: https://dev-author.projectname.com
-  author.ip: http://localhost:4502
+  author.url: http://34.250.207.77:5000/aem/start.html 
+  author.ip: 34.250.207.77:5000
   author.login: admin
   author.password: admin
   login.token.name: login-token
