--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -8,4 +8,5 @@ default:
     timings.implicitTimeout: 10
     page.title.timeout: 30
     thread.count: 3
+    allure.report: true
   contexts: [chrome,locator,dev]
