--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile group: 'com.cognifide.qa.bb', name: 'bb-junit5', version: bobcatVersion
     compile group: 'com.cognifide.qa.bb', name: 'bb-aem-core', version: bobcatVersion
     compile group: 'com.cognifide.qa.bb', name: 'bb-aem-64', version: bobcatVersion
+    compile group: 'com.cognifide.qa.bb', name: 'bb-aem-classic', version: '1.2.1'
 }
 
 
